# cxsun-test

./: .env.sample  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/: config.json
apps/crm/: index.html
apps/crm/src/: App.tsx
apps/cxsun/: index.html
apps/cxsun/src/: App.tsx  theme.css
apps/erp/: index.html
apps/erp/src/: App.tsx
config/: api.cfg  app.cfg  docker.cfg
cortex/: main.py
cortex/DTO/: dal.py
cortex/auth/: tokengen.py
cortex/controllers/: auth_controller.py
cortex/core/: config.py  dataserve.py  hashing.py  jwt_handler.py  logger.py  security.py
cortex/database/schemas/: auth.py  user.py
cortex/database/seeders/: user_seeder.py
cortex/models/: token.py  user.py
cortex/routes/: api.py
docs/cli/: usage.md
docs/corebase/codemaker/: copy.md  docker installation.md  emoji.md  filegenerator.md  installation.md
docs/to review/: chatty.md  docker build usage.md  frontend.md  mindmap.md  prefiq emoji cleaner.md  prefiq structure.md  pycharm.md  react.md  ui.md
prefiq/: __init__.py  __main__.py  install.py
prefiq/app/: app_gen.py
prefiq/cli/: cli.py
prefiq/config/: generate.py  usage.md
prefiq/docker/: __init__.py  docker_gen.py  gen_docker_json.py  generate_from_template.py
prefiq/git/: git_gen.py
prefiq/templates/: Traefik.j2  cloud.j2  mariadb.j2  nginx.conf.j2  nginx.j2
prefiq/utils/: cprint.py  j2template_formater.py
tests/config/: test_app_cli.py  test_app_config.py
(+174 files in other folders)
